--- a/pom.xml
+++ b/pom.xml
@@ -45,7 +45,7 @@
 
     <properties>
         <junit-jupiter.version>5.7.1</junit-jupiter.version>
-        <junit.version>4.12</junit.version>
+        <junit.version>4.13.2</junit.version>
         <junit-platform.version>1.7.1</junit-platform.version>
         <slf4j-log4j12.version>1.7.25</slf4j-log4j12.version>
 
@@ -181,21 +181,6 @@
                     </compilerArgs>
                 </configuration>
             </plugin>
-
-            <plugin>
-                <artifactId>maven-deploy-plugin</artifactId>
-                <version>2.8.2</version>
-                <executions>
-                    <execution>
-                        <id>default-deploy</id>
-                        <phase>deploy</phase>
-                        <goals>
-                            <goal>deploy</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-
             
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -231,7 +216,36 @@
                  </executions>
              </plugin>
  
- 
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>3.4.0</version>
+                <executions>
+                  <execution>
+                    <id>attach-javadocs</id>
+                    <phase>deploy</phase>
+                    <goals>
+                        <goal>jar</goal>
+                    </goals>
+                  </execution>
+                </executions>
+            </plugin>
+
+            <!-- explicitly define maven-deploy-plugin after other to force exec order -->
+             <plugin>
+                <artifactId>maven-deploy-plugin</artifactId>
+                <version>2.8.2</version>
+                <executions>
+                    <execution>
+                        <id>default-deploy</id>
+                        <phase>deploy</phase>
+                        <goals>
+                            <goal>deploy</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+
              <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
@@ -244,15 +258,6 @@
                         <exclude>app.getxray.xray.junit.customjunitxml.wip.TestingExperiments</exclude>
                       </excludes>
                 </configuration>
-                <!--
-                <dependencies>
-                    <dependency>
-                      <groupId>org.apache.maven.surefire</groupId>
-                      <artifactId>surefire-junit-platform</artifactId>
-                      <version>3.0.0-M5</version>
-                    </dependency>
-                </dependencies>
-                -->
             </plugin>
 
             <plugin>
