--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -26,13 +26,16 @@ jobs:
     - name: Generate JaCoCo Badge
       id: jacoco
       uses: cicirello/jacoco-badge-generator@v2.0.1
+      if: matrix.os == 'ubuntu-latest'
 
     - name: Log coverage percentage
+      if: matrix.os == 'ubuntu-latest'
       run: |
         echo "coverage = ${{ steps.jacoco.outputs.coverage }}"
         echo "branch coverage = ${{ steps.jacoco.outputs.branches }}"
 
     - name: Commit the badge (if it changed)
+      if: matrix.os == 'ubuntu-latest'
       run: |
         if [[ `git status --porcelain -uno` ]]; then
           git config --global user.name 'Sergio Freire'
@@ -44,6 +47,7 @@ jobs:
 
     - name: Upload JaCoCo coverage report
       uses: actions/upload-artifact@v2
+      if: matrix.os == 'ubuntu-latest'
       with:
         name: jacoco-report
         path: target/site/jacoco/
