--- a/pom.xml
+++ b/pom.xml
@@ -251,7 +251,7 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.22.1</version>
                 <configuration>
-                    <testFailureIgnore>true</testFailureIgnore>
+                    <testFailureIgnore>false</testFailureIgnore>
                     <disableXmlReport>true</disableXmlReport>
                     <useFile>false</useFile>
                     <excludes>
