--- a/.github/workflows/PR.yml
+++ b/.github/workflows/PR.yml
@@ -9,8 +9,10 @@ on:
 
 jobs:
   build:
-
-    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        os: [ubuntu-latest, windows-latest]
+    runs-on: ${{ matrix.os }}
 
     steps:
     - uses: actions/checkout@v2
@@ -24,8 +26,10 @@ jobs:
     - name: Generate JaCoCo Badge
       id: jacoco
       uses: cicirello/jacoco-badge-generator@v2.0.1
+      if: matrix.os == 'ubuntu-latest'
 
     - name: Log coverage percentage
+      if: matrix.os == 'ubuntu-latest'
       run: |
         echo "coverage = ${{ steps.jacoco.outputs.coverage }}"
         echo "branch coverage = ${{ steps.jacoco.outputs.branches }}"
