--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <groupId>app.getxray</groupId>
     <artifactId>xray-junit-extensions</artifactId>
     <packaging>jar</packaging>
-    <version>0.6.2</version>
+    <version>0.8.0</version>
     <name>xray-junit-extensions</name>
     <description>Improvements for JUnit that allow you to take better advantage of JUnit 5 (jupiter engine) whenever using it together with Xray Test Management.</description>
     <url>https://github.com/Xray-App/xray-junit-extensions</url>
@@ -44,9 +44,8 @@
     </scm>
 
     <properties>
-        <junit-jupiter.version>5.7.1</junit-jupiter.version>
-        <junit.version>4.13.2</junit.version>
-        <junit-platform.version>1.7.1</junit-platform.version>
+        <junit-jupiter.version>5.10.2</junit-jupiter.version>
+        <junit-platform.version>1.10.2</junit-platform.version>
         <slf4j-log4j12.version>1.7.25</slf4j-log4j12.version>
 
         <!--Xray Properties -->
@@ -138,7 +137,44 @@
             <version>1.7.1</version>
             <scope>test</scope>
         </dependency>
-                
+        <dependency>
+            <groupId>com.jayway.jsonpath</groupId>
+            <artifactId>json-path</artifactId>
+            <version>2.9.0</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.jayway.jsonpath</groupId>
+            <artifactId>json-path-assert</artifactId>
+            <version>2.9.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.16.2</version>
+            <scope>test</scope>
+          </dependency>
+        
+          <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+            <version>2.16.2</version>
+
+        </dependency>
+
+      <dependency>
+        <groupId>org.json</groupId>
+        <artifactId>json</artifactId>
+        <version>20240303</version>
+      </dependency>
+    
+        <dependency>
+            <groupId>com.networknt</groupId>
+            <artifactId>json-schema-validator</artifactId>
+            <version>1.3.3</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
    <distributionManagement>
