--- a/src/test/resources/xray-junit-extensions.properties
+++ b/src/test/resources/xray-junit-extensions.properties
@@ -1,3 +1,11 @@
 # report_filename=custom-report-junit
 # report_directory=reports
 # add_timestamp_to_report_filename=true
+user=xpto
+project_key=CALC
+summary=test automation results
+description=selenium test results
+version=1.0
+revision=123
+testplan_key=CALC-1000
+test_environments=chrome
