add test for reports per test class and fixed logic for name of report

--- a/src/test/resources/xray-junit-extensions.properties
+++ b/src/test/resources/xray-junit-extensions.properties
@@ -1,3 +1,4 @@
 # report_filename=custom-report-junit
 # report_directory=reports
 # add_timestamp_to_report_filename=true
+# reports_per_class=true
