--- a/.github/workflows/PR.yml
+++ b/.github/workflows/PR.yml
@@ -16,6 +16,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    - name: Check broken links in documentation using Markup Link Checker (mlc)
+      uses: becheran/mlc@v0.18.0
     - name: Set up JDK 1.8
       uses: actions/setup-java@v1
       with:
