--- a/.github/workflows/PR.yml
+++ b/.github/workflows/PR.yml
@@ -18,6 +18,7 @@ jobs:
     - uses: actions/checkout@v2
     - name: Check broken links in documentation using Markup Link Checker (mlc)
       uses: becheran/mlc@v0.18.0
+      if: runner.os == 'Linux'
     - name: Set up JDK 1.8
       uses: actions/setup-java@v1
       with:
