--- a/pom.xml
+++ b/pom.xml
@@ -44,11 +44,13 @@
     </scm>
 
     <properties>
-        <junit.version>5.12.1</junit.version>
+        <junit.version>5.13.0-M2</junit.version>
         <mockito.version>4.3.1</mockito.version>
         <slf4j-log4j12.version>1.7.25</slf4j-log4j12.version>
         <version.maven-plugin-plugin>3.6.0</version.maven-plugin-plugin>
         <nexus-staging-maven-plugin.version>1.6.13</nexus-staging-maven-plugin.version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     </properties>
 
     <dependencyManagement>
@@ -166,10 +168,11 @@
 
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <groupId>org.apache.maven.plugins</groupId>
+                <version>3.14.0</version>
                 <configuration>
                     <debug>true</debug>
-                    <source>1.8</source>
-                    <target>1.8</target>
+                    <release>11</release>
                     <compilerArgs>
                         <!-- this flag is required in order to obtain the name of parameters in test methods -->
                         <arg>-parameters</arg>
