--- a/.github/workflows/PR.yml
+++ b/.github/workflows/PR.yml
@@ -19,10 +19,11 @@ jobs:
     - name: Check broken links in documentation using Markup Link Checker (mlc)
       uses: becheran/mlc@v0.18.0
       if: runner.os == 'Linux'
-    - name: Set up JDK 1.8
-      uses: actions/setup-java@v1
+    - name: Set up JDK 17
+      uses: actions/setup-java@v5
       with:
-        java-version: 1.8
+        distribution: 'temurin'
+        java-version: 17
     - name: Build with Maven
       run: mvn -B package --file pom.xml
 
