--- a/.github/workflows/publish-maven.yml
+++ b/.github/workflows/publish-maven.yml
@@ -23,7 +23,7 @@ jobs:
       with:
         java-version: '17'
         distribution: 'temurin'
-        server-id: ossrh
+        server-id: central-portal
         server-username: MAVEN_USERNAME
         server-password: MAVEN_PASSWORD
         cache: maven
