--- a/pom.xml
+++ b/pom.xml
@@ -163,10 +163,10 @@
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <groupId>org.apache.maven.plugins</groupId>
-                <version>3.14.0</version>
+                <version>3.14.1</version>
                 <configuration>
                     <debug>true</debug>
-                    <release>11</release>
+                    <release>${java.version}</release>
                     <compilerArgs>
                         <!-- this flag is required in order to obtain the name of parameters in test methods -->
                         <arg>-parameters</arg>
