--- a/.github/workflows/publish-maven.yml
+++ b/.github/workflows/publish-maven.yml
@@ -39,4 +39,4 @@ jobs:
         MAVEN_USERNAME: ${{ secrets.OSSRH_USERNAME }}
         MAVEN_PASSWORD: ${{ secrets.OSSRH_PASSWORD }}
       run: |
-        mvn --batch-mode -Dgpg.passphrase="" clean compile verify package javadoc:aggregate-jar deploy
+        mvn --batch-mode -Dgpg.passphrase="" clean compile verify javadoc:aggregate-jar deploy
